<resources>
    <string name="app_name">My App Portfolio</string>
    <string name="action_settings">Settings</string>
    <string name="build_it_bigger">Build it Bigger</string>
    <string name="library_app">Library App</string>
    <string name="scores_app">Scores App</string>
    <string name="spotify_streamer">Spotify Streamer</string>
    <string name="my_nanodegree_apps">My Nanodegree Apps!</string>
    <string name="xyz_reader">XYZ Reader</string>
    <string name="capstone_my_own_app">Capstone: My Own App</string>
    <string name="this_button_will_launch">This Button Will Launch my </string>
</resources>
